enable link to userspace from account dropdown my profile link

--- a/src/static/sass/components/Header/Header.scss
+++ b/src/static/sass/components/Header/Header.scss
@@ -299,7 +299,7 @@ $accountWidth: 250px;
 .header .right * a {
   color: #fff;
   text-decoration: none;
-  &.logoutLink {
+  &.userLink {
     color: $clDark;
   }
 }
