--- a/src/static/sass/components/Header/Header.scss
+++ b/src/static/sass/components/Header/Header.scss
@@ -96,6 +96,7 @@ $accountWidth: 250px;
     position: relative;
     vertical-align: top;
     height: $headerHeight;
+    margin-left: -4px;
     padding: 45px 50px 0 15px;
     font-size: 1.55em;
     box-sizing: border-box;
