Refactoring CSS for header

--- a/src/static/sass/_index_header.scss
+++ b/src/static/sass/_index_header.scss
@@ -1,4 +1,4 @@
-@import './style/_variables.scss';
-@import './style/_fonts.scss';
-@import './style/_images.scss';
+@import 'header/_variables.scss';
+@import 'header/_fonts.scss';
+@import 'header/_images.scss';
 @import './components/Header/Header.scss';
