--- a/src/static/sass/header/_variables.scss
+++ b/src/static/sass/header/_variables.scss
@@ -1,5 +1,10 @@
 /* Media Suite colors */
+/* Dimensions */
+$headerHeight: 115px;
+$logoWidth: 295px;
+$accountWidth: 250px;
 
+/* Colors */
 $clOrange: #F26C50; 
 $clBlue: #468DCB;
 $clLightBlue: #9FBDD7;
@@ -12,12 +17,9 @@ $clError: #F25050;
 $clWarning: #F29650;
 $clConfirm: #50F27A;
 
-
 /* Font */
-
 $fontHeading: "Maven Pro", sans-serif;
 $fontBody: "Open Sans", sans-serif;
 
 /* Animation */
-
 $transition: 0.2s ease-out;
